--- a/src/styles/aboutus.css
+++ b/src/styles/aboutus.css
@@ -1,4 +1,7 @@
-.nosotros-perse p {
+/* ============ ESTILOS GENERALES ============ */
+
+.nosotros-perse p,
+.parrafos-nosotros {
     width: 70%;
     margin: 0 auto 30px auto;
     text-align: center;
@@ -6,141 +9,204 @@
     font-size: 1.2rem;
     line-height: 1.8;
     color: var(--color-separador);
+    font-weight: bold;
 }
 
 .nosotros-1 {
     margin-top: 2rem;
     width: 100%;
-    }
+}
 
-.logo-contenedor-nosotros{
-    margin-top: 2rem;
-    margin-left: 25%;
-    align-items: end;
-    display: flex; 
+.logo-contenedor-nosotros {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    }
+    gap: 1rem;
+    text-align: center;
+    margin: 2rem auto;
+}
 
-.logo-img-nosotros{
+.logo-img-nosotros {
     width: 10rem;
 }
 
-.titular-nosotros{
-    margin-bottom: 1rem;
+.titular-nosotros {
     font-size: 2.5rem;
     font-weight: bold;
-    color: var(--color-separador); 
-}
-
-.parrafos-nosotros {
-    font-size: 1.5rem;
-    width: 60%;
-    margin: 0 auto;
     color: var(--color-separador);
-    font-weight: bold;
-    text-align: center;
+    margin: 0;
 }
 
 .nosotros-2 {
     background-image: url(../assets/02-Urugay-Tannat.png);
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 40vh;
-    max-width: 100%;
-    height: 10vw;
-    padding: 1rem 1rem 15rem 0rem;
-    font-size: 1.5rem;
+    min-height: 30rem;
+    padding: 4rem 2rem;
+    font-size: 1.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    box-sizing: border-box;
 }
-
 
 .contenedor-img-altura {
     width: 100%;
-    height: 100vh;
+    max-height: 40rem;
     overflow: hidden;
     margin-bottom: 2rem;
 }
 
 .img-altura-nosotros {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
     object-position: center;
+    display: block;
 }
 
-
-.contenedor-parrafos-uvas{
+.contenedor-parrafos-uvas {
     background-image: url(../assets/uvas-tannat.jpg);
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 60vh;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
-    padding: 2rem;
-    box-sizing: border-box;
-    color: var(--color-fondo);
-    font-size: 1.5rem;
+    padding: 3rem 2rem;
+    color: var(--color-header);
+    font-size: 1.2rem;
     font-weight: bold;
     text-align: center;
-    place-items: center;
-
 }
 
 .parrafos-nosotros-uvas {
-    font-size: 1.2rem;
-    width: 80%;
-    color: var(--color-header);
-    font-weight: bold;
+    width: 90%;
+    margin: 0 auto;
 }
 
-.nosotros-4{
+.nosotros-4 {
     background-color: var(--color-header);
-    margin-top: 2rem;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 0rem 5rem;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    width: 100%;
-    height: fit-content;
-}
-
-.cont-p-triptico-nosotros{
-    grid-column: 2 / 4;
-    display: flex;
-    justify-content: flex-start;
-    font-size: 1.2rem;
-    width: 100%;
-    max-width: 60%;
-    color: var(--color-separador);
-    margin: 10 auto;
-}
-    
-.cont-img-triptico-nosotros{
-    display: flex;
-    justify-content: end;
-    margin-right: 1rem;
-    }
-
-.img-triptico-nosotros{
-    width: 25rem;
-    padding: 1rem 0 1rem 10rem;
-    }
-
-.nosotros-6{
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    }
+    gap: 2rem;
+    padding: 3rem 2rem;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+}
 
-.nosotros-6 img{
+.cont-img-triptico-nosotros {
+    display: flex;
+    justify-content: center;
+}
+
+.img-triptico-nosotros {
+    width: 100%;
+    max-width: 25rem;
+    height: auto;
+    object-fit: cover;
+    padding: 0;
+}
+
+.cont-p-triptico-nosotros {
+    font-size: 1.1rem;
+    color: var(--color-separador);
+    max-width: 90%;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.nosotros-6 {
+    margin: 3rem auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    width: 100%;
+}
+
+.nosotros-6 img {
     width: 100%;
     object-fit: cover;
+    max-height: 40rem;
+    display: block;
+}
+
+/* ============ MEDIA QUERIES: RESPONSIVE ============ */
+
+@media (max-width: 991.98px) {
+    .nosotros-perse p,
+    .parrafos-nosotros {
+        width: 90%;
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .logo-contenedor-nosotros {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .titular-nosotros {
+        font-size: 2rem;
+    }
+
+    .nosotros-2 {
+        min-height: auto;
+        padding: 2rem 1rem;
+        font-size: 1rem;
+    }
+
+    .contenedor-parrafos-uvas {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        padding: 2rem 1rem;
+        gap: 1.5rem;
+    }
+
+    .parrafos-nosotros-uvas {
+        font-size: 1rem;
+        width: 90%;
+    }
+
+    .nosotros-4 {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        padding: 2rem 1rem;
+    }
+
+    .cont-p-triptico-nosotros {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .img-triptico-nosotros {
+        width: 90%;
+        padding: 0;
+    }
+
+    .nosotros-6 {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+
+    .nosotros-6 img {
+        height: auto;
+    }
+}
+
+/* ============ COLORES DE TITULARES ============ */
+.nosotros-perse h2,
+.nosotros-1 h2,
+.nosotros-2 h2,
+.nosotros-3 h2,
+.nosotros-4 h2,
+.nosotros-6 h2,
+.contenedor-titulo h2 {
+    color: var(--color-header);
+    text-align: center;
 }
