--- a/src/styles/loginAdmin.css
+++ b/src/styles/loginAdmin.css
@@ -1,60 +1,84 @@
+*{box-sizing:border-box}
+
 .login-admin-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.login-admin-container button {
-    display: block;
-    margin: 2rem auto 0;
-    padding: 0.6rem 1.2rem;
-    background-color: var(--color-footerPerse);
-    color: var(--color-separador);
-    border: solid 1px var(--color-separador);
-    border-radius: 0.5rem;
-    cursor: pointer;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
-
-.login-admin-container button:hover {
-    background-color: var(--color-header);
-    color: var(--color-separador);
-}
-
-.login-admin-container input{
-    width: 30%;
-    padding: 0.3rem;
-    border-radius: 0.25rem;
-    border: 1px solid var(--color-separador);
-    font-size: 0.9rem;
-    color: var(--color-separador);
-}
-
-.login-admin-container label{
-    color: var(--color-separador);
+    display:flex;
+    flex-direction:column;
+    align-items:center;
 }
 
 .login-admin-container h2{
-    color: var(--color-separador);
+    color:var(--color-header)
 }
 
-.input-password-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 31%;
+.login-admin-container label{
+    color:var(--color-separador);
+    margin-top:1rem
 }
 
-.input-password-container input {
-    width: 100%;
-    padding-right: 40px;
+.login-admin-container button{
+    width:100%;
+    max-width:10rem;
+    margin:2rem auto 0;
+    padding:.6rem 1.2rem;
+    background:var(--color-footerPerse);
+    color:var(--color-separador);
+    border:1px solid var(--color-separador);
+    border-radius:.5rem;
+    font-weight:bold;
+    cursor:pointer;
+    transition:background .3s
+}
+.login-admin-container button:hover{
+    background:var(--color-header)
 }
 
-.icon-eye {
-    position: absolute;
-    right: 10px;
-    cursor: pointer;
-    color: var(--color-separador);
-    font-size: 1.2rem;
+
+.admin-input-wrapper{
+    position:relative;
+    width:30%;
+    max-width:30rem
+}
+.admin-input-wrapper input{
+    width:100%;
+    padding:.4rem .6rem;
+    border:1px solid var(--color-separador);
+    border-radius:.25rem;
+    font-size:.9rem;
+    color:var(--color-separador)
+}
+.admin-input-wrapper--password input{
+    padding-right:3rem
+}
+
+
+.admin-eye{
+    position:absolute;
+    top:50%;
+    right:.8rem;
+    transform:translateY(-50%);
+    font-size:1.2rem;
+    color:var(--color-separador);
+    cursor:pointer
+}
+
+@media(max-width:991.98px){
+    .admin-input-wrapper{
+        width:60%
+    }
+}
+
+@media(max-width:575.98px){
+    .admin-input-wrapper{
+        width:90%
+    }
+    .admin-input-wrapper--password input{
+        padding-right:3.2rem
+    }
+    .admin-eye{
+        right:1rem;
+        font-size:1.1rem
+    }
+    .login-admin-container h2{
+        font-size:1.4rem
+    }
 }
