--- a/src/styles/registro.css
+++ b/src/styles/registro.css
@@ -1,10 +1,55 @@
-.registro-container{
+.login-admin-container {
+    padding: 2rem;
+    max-width: 800px;
+    margin: 0 auto;
+    background-color: var(--color-fondo);
+    border-radius: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 1rem;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+}
+
+.admin-h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    color: var(--color-header);
+    background-color: var(--color-separador);
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.admin-input-wrapper {
+    position: relative;
+    display: flex;
     align-items: center;
 }
 
-.registro-container button {
+.admin-input-wrapper input {
+    width: 100%;
+    padding: 0.6rem;
+    padding-right: 2.5rem;
+    border-radius: 0.25rem;
+    border: 1px solid var(--color-separador);
+    font-size: 0.9rem;
+    color: var(--color-separador);
+}
+
+.admin-eye {
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+    color: var(--color-separador);
+    font-size: 1.2rem;
+}
+
+.login-admin-container label {
+    color: var(--color-separador);
+    font-weight: 500;
+}
+
+.login-admin-container button {
     display: block;
     margin: 2rem auto 0;
     padding: 0.6rem 1.2rem;
@@ -15,47 +60,9 @@
     cursor: pointer;
     font-weight: bold;
     transition: background-color 0.3s ease;
-    max-width: 10rem;
 }
 
-.registro-container button:hover {
+.login-admin-container button:hover {
     background-color: var(--color-header);
     color: var(--color-separador);
-}
-
-.registro-container input{
-    width: 30%;
-    padding: 0.3rem;
-    border-radius: 0.25rem;
-    border: 1px solid var(--color-separador);
-    font-size: 0.9rem;
-    color: var(--color-separador);
-}
-
-.registro-container label{
-    color: var(--color-separador);
-}
-
-.registro-container h2{
-    color: var(--color-separador);
-}
-
-.input-password-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 31%;
-}
-
-.input-password-container input {
-    width: 100%;
-    padding-right: 40px;
-}
-
-.icon-eye {
-    position: absolute;
-    right: 10px;
-    cursor: pointer;
-    color: var(--color-separador);
-    font-size: 1.2rem;
 }
