--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,7 +14,6 @@ main h2 {
     font-family: "Libre Caslon Text";
     }
 
-/* INICIO CSS CORTE*/
 .corte-info-card{
     padding: 0;
     margin: 2rem auto;
@@ -63,6 +62,7 @@ main h2 {
 .carousel-control-prev-icon {
     width: 0rem !important;
 }
+
 .corte-carousel .carousel-control-prev,
 .corte-carousel .carousel-control-next {
     color: var(--color-separador);
@@ -105,6 +105,8 @@ main h2 {
     padding: 0 2rem;
 }
 
+/*MEDIA QUERIES*/
+
 @media (max-width: 767.98px) {
     .corte-perse-mobile {
     width: 100%;       
@@ -113,8 +115,6 @@ main h2 {
     margin: 0 auto;    
     }
 }
-/* FIN CSS CORTE*/
-/* INICIO CSS BANNER*/
 
 .banner-slide{
     width: 100%;
@@ -141,6 +141,8 @@ main h2 {
     width: 100%;
 }
 
+/*MEDIA QUERIES*/
+
 @keyframes slide {
     0% {margin-left: 0%;}
     45% {margin-left: 0%;}
@@ -148,9 +150,6 @@ main h2 {
     50% {margin-left: -100%;}
     100% {margin-left: -100%;}    
 }
-
-/* FIN CSS BANNER*/
-/* INICIO CSS BODEGAMES*/
 
 .destacados h2 {
     text-align: center;
@@ -197,7 +196,6 @@ main h2 {
     box-shadow: 0 2px 2px rgba(87, 27, 45, 0.2);
 }
 
-
 .boton-sin-estilo {
     background: none;
     border: none;
@@ -223,19 +221,21 @@ main h2 {
     object-fit: cover;
     transition: transform 0.25s;
 }
-.flyer-wrapper .flyer-img:hover { transform: scale(1.05); }
+
+.flyer-wrapper 
+.flyer-img:hover { 
+    transform: scale(1.05); 
+}
 
 .destacados-carousel .carousel-control-prev-icon,
 .destacados-carousel .carousel-control-next-icon {
     background-image: none;   
 }
 
-
 .destacados-carousel .carousel-control-prev-icon,
 .destacados-carousel .carousel-control-next-icon {
     width: 0 !important;
 }
-
 
 .destacados-carousel .carousel-control-prev,
 .destacados-carousel .carousel-control-next {
@@ -247,7 +247,6 @@ main h2 {
     justify-content: center;
     text-decoration: none;
 }
-
 
 .destacados-carousel .carousel-control-prev::after {
     content: "‹";
@@ -262,7 +261,6 @@ main h2 {
     transform: translateX(-10%);
 }
 
-
 .destacados-carousel .carousel-indicators [data-bs-target] {
     background-color: var(--color-separador);
     opacity: 0.4;
@@ -271,14 +269,16 @@ main h2 {
     border-radius: 50%;
     margin: 0 4px;
 }
+
 .destacados-carousel .carousel-indicators .active {
     opacity: 1;
 }
 
-
 .destacados-carousel .carousel-inner {
     padding: 0 2rem;
 }
+
+/*MEDIA QUERIES*/
 
 @media (max-width: 991.98px) {
     .destacados-carousel .flyer-wrapper {
@@ -290,11 +290,11 @@ main h2 {
     }
 }
 
-
 .destacados-carousel .carousel-control-prev-icon,
 .destacados-carousel .carousel-control-next-icon {
     filter: invert(35%) drop-shadow(0 0 3px rgba(0,0,0,.7));
 }
+
 .destacados-carousel .carousel-control-prev,
 .destacados-carousel .carousel-control-next {
     width: 8%;                 
